# book-shop

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
apps/: urls.py
apps/books/: admin.py  filters.py  models.py  serializer.py  tasks.py  urls.py  views.py
apps/books/migrations/: 0001_initial.py  0002_initial.py  0003_alter_book_image.py
apps/users/: admin.py  apps.py  models.py  urls.py
apps/users/migrations/: 0001_initial.py
nginx/: nginx.conf
root/: celery.py  settings.py  urls.py
